plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'edu.mimuw.sovaide'
version = '1.0.0'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
	withSourcesJar()
}

repositories {
	mavenCentral()
}
dependencies {
	implementation project(':plugin-api')

	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'com.github.javaparser:javaparser-core:3.27.0'
	implementation 'org.springframework.boot:spring-boot-starter-data-neo4j:3.5.0'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.testcontainers:testcontainers:1.21.3'
    testImplementation 'org.testcontainers:neo4j:1.21.3'
    testImplementation 'org.testcontainers:junit-jupiter:1.21.3'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(JavaExec) {
	jvmArgs += ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
}

springBoot {
    mainClass = 'edu.mimuw.sovaide.Application'
}
